# bias-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/bias-cli/: Cargo.toml
crates/bias-cli/src/: main.rs
crates/bias-rs/: Cargo.toml
crates/bias-rs-cli/: Cargo.toml
crates/bias-rs-cli/src/: main.rs
crates/bias-rs/examples/: csv_audit.rs
crates/bias-rs/src/: audit.rs  config.rs  dataset.rs  error.rs  lib.rs  report.rs  stats.rs  table.rs
crates/bias-rs/src/io/: csv.rs  parquet.rs
docs/: methodology.md  report-schema.md
