[package]
name = "bias-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for dataset bias detection."

[[bin]]
name = "bias"
path = "src/main.rs"

[dependencies]
bias-rs = { path = "../bias-rs" }

[lints]
workspace = true
