[package]
name = "bias-rs-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for dataset bias detection."

[[bin]]
name = "bias"
path = "src/main.rs"

[dependencies]
bias-rs = { path = "../bias-rs" }
clap = { version = "4.5.53", features = ["derive"] }
serde_json = "1.0.145"

[lints]
workspace = true
