[package]
name = "bias-rs"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Dataset bias detection for tabular data."

[lib]
name = "bias_rs"
path = "src/lib.rs"

[dependencies]
arrow-array = "56.2.0"
arrow-schema = "56.2.0"
serde = { version = "1.0.228", features = ["derive"] }
statrs = "0.18.0"
thiserror = "2.0.17"

[lints]
workspace = true
